# component-custom-python

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  docker-compose.yml  flake8.cfg  pyproject.toml  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt
.github/workflows/: push.yml
.ssh/: known_hosts
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md  loggerConfiguration.json
scripts/: build_n_test.sh  build_n_test_docker.py
src/: component.py  configuration.py  package_installer.py  source_file.py  source_git.py  subprocess_runner.py  venv_manager.py
tests/: config-1_git-example-1-base.json  config-2_git-example-1-3.13.json  config-3_git-example-2-base.json  config-4_git-example-2-3.13.json  config-5_code-base-pandas.json  config-6_code-3.13-pandas.json  config-7_code-base-httpx-only.json  config-7_code-base-no-packages.json  config-8_code-3.13-httpx-only.json  config-8_code-3.13-no-packages.json  test_component.py
